--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">تبديل القيود</string>
     <string name="menu_clear_all">مسح الكل</string>
     <string name="menu_restrict_all">تقييد الكل</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">تغيير الفلتر</string>
     <string name="menu_apply">تطبيق القالب</string>
     <string name="menu_clear">إلغاء التحديد</string>
