--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Beschränkungen invertieren</string>
     <string name="menu_clear_all">Alles löschen</string>
     <string name="menu_restrict_all">Alles beschränken</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Filter invertieren</string>
     <string name="menu_apply">Template übernehmen</string>
     <string name="menu_clear">Nichts (beschränkt)</string>
