--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_clear_all">Clear all</string>
     <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Tühjenda</string>
