--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">制限の身に切り替え</string>
     <string name="menu_clear_all">Clear all</string>
     <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">フィルタ</string>
     <string name="menu_apply">テンプレを適用</string>
     <string name="menu_clear">クリア</string>
