--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Schakel beperkingen</string>
     <string name="menu_clear_all">Alles wissen</string>
     <string name="menu_restrict_all">Alles beperken</string>
+    <string name="menu_clear_usage">Wissen</string>
     <string name="menu_usage_all">Schakel filter</string>
     <string name="menu_apply">Pas sjabloon toe</string>
     <string name="menu_clear">Wissen</string>
