--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Przełącz restrykcje</string>
     <string name="menu_clear_all">Wyczyść wszystko</string>
     <string name="menu_restrict_all">Ogranicz wszystko</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Przełącz filtry</string>
     <string name="menu_apply">Zastosuj szablon</string>
     <string name="menu_clear">Wyczyść</string>
