--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Переключить разрешения</string>
     <string name="menu_clear_all">Очистить все</string>
     <string name="menu_restrict_all">Запретить все</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Переключить фильтр</string>
     <string name="menu_apply">Применить шаблон</string>
     <string name="menu_clear">Очистить</string>
