--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Переключити довзоли</string>
     <string name="menu_clear_all">Очистити всі</string>
     <string name="menu_restrict_all">Заборонити всі</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Переключити фільтр</string>
     <string name="menu_apply">Застосувати шаблон</string>
     <string name="menu_clear">Очистити</string>
