--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_restriction_all">Thay đổi các sự hạn chế</string>
     <string name="menu_clear_all">Xóa tất cả</string>
     <string name="menu_restrict_all">Hạn chế tất cả</string>
+    <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Thay đổi bộ lọc</string>
     <string name="menu_apply">Áp dụng thiết lập mẫu</string>
     <string name="menu_clear">Xóa thiết lập</string>
