--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -112,6 +112,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_expert">Mode expert</string>
     <string name="settings_dangerous">Restreindre fonctions dangereuses</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
+    <string name="settings_experimental">Experimental features</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
