--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -112,6 +112,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
+    <string name="settings_experimental">Experimental features</string>
     <string name="help_application">יישום</string>
     <string name="help_internet">כולל הרשאות גישה לאינטרנט</string>
     <string name="help_granted">כולל הרשאות גישה לאנדרואיד</string>
