--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_kill" translatable="false">Kill</string>
     <string name="menu_accounts">Select accounts to allow</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Select contacts to allow</string>
