--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -112,7 +112,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental features</string>
+    <string name="settings_experimental">Experimental functions</string>
     <string name="help_application">Апликација</string>
     <string name="help_internet">има дозволу за Интернет</string>
     <string name="help_granted">има дозволу за Андроид</string>
