--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -125,7 +125,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental features</string>
+    <string name="settings_experimental">Experimental functions</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
