--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -21,12 +21,12 @@
     <string name="menu_help">Pomocník</string>
     <string name="menu_all">Všetko</string>
     <string name="menu_restriction_all">Prepnúť obmedzenia</string>
-    <string name="menu_clear_all">Vyčistiť všetky</string>
+    <string name="menu_clear_all">Vymazať všetky</string>
     <string name="menu_restrict_all">Obmedziť všetky</string>
-    <string name="menu_clear_usage">Clear</string>
+    <string name="menu_clear_usage">Vymazať</string>
     <string name="menu_usage_all">Prepnúť filter</string>
     <string name="menu_apply">Použiť šablónu</string>
-    <string name="menu_clear">Vyčistiť</string>
+    <string name="menu_clear">Vymazať</string>
     <string name="menu_app_launch">Spustiť</string>
     <string name="menu_app_settings">Nastavenia</string>
     <string name="menu_app_store">Obchod Play</string>
@@ -112,8 +112,8 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="settings_log">Záznam na ladenie (vyžaduje reštart)</string>
     <string name="settings_expert">Režim experta</string>
     <string name="settings_dangerous">Obmedziť nebezpečné funkcie</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental functions</string>
+    <string name="settings_confidence">Maximálny interval spoľahlivosti sťahovania</string>
+    <string name="settings_experimental">Experimentálne funkcie</string>
     <string name="help_application">Aplikácia</string>
     <string name="help_internet">má internetové povolenie</string>
     <string name="help_granted">má Android povolenie</string>
