--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -120,14 +120,14 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="help_frozen">est désactivée</string>
     <string name="help_dangerous">est dangereuse, restreindre peut causer des problèmes</string>
     <string name="help_half">partiellement restreinte</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
-\nApps will be fed empty or fake data for restricted categories\n
-\nTap the app icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
-    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="help_attention">des restrictions ont besoin d'attention</string>
+    <string name="help_restricted">des restrictions sont changées</string>
+    <string name="help_shared">des restrictions sont envoyées</string>
+    <string name="tutorial_mainheader">Choisir la catégorie à restreindre; choisir les applis à afficher avec les filtres</string>
+    <string name="tutorial_mainlist">Appuyer sur une case à cocher pour restreindre la catégorie choisie pour l’appli\n
+\nL’appli sera dupée par des données vide ou modifiée\n
+\nAppuyer sur l’icône de l’appli pour les restrictions détaillées et les paramètres</string>
+    <string name="tutorial_detailsheader">Appuyer sur l’icône pour plus d’actions</string>
+    <string name="tutorial_detailslist">Appuyer sur la flèche vers les bas pour voir les particularités d’une catégorie de restrictions</string>
 
 </resources>
