Make "kill" translatable

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">Executa</string>
     <string name="menu_app_settings">Configuració</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">Selecciona comptes a permetre</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Selecciona contactes a permetre</string>
