--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">Çalıştır</string>
     <string name="menu_app_settings">Ayarlar</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">İzin verilecek hesapları seç</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">İzin verilecek kişileri seç</string>
