--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">Seoladh</string>
     <string name="menu_app_settings">sonraí App</string>
     <string name="menu_app_store">Store Súgartha</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">Roghnaigh cuntais a cheadú</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Roghnaigh cuntais a cheadú</string>
