--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">הפעל</string>
     <string name="menu_app_settings">הגדרות</string>
     <string name="menu_app_store">חנות Google Play</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">בחר חשבונות לאפשר</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">בחר אנשי קשר לאפשר</string>
