--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">Iniciar</string>
     <string name="menu_app_settings">Detalhes da aplicação</string>
     <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">Selecione contas a autorizar</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Selecione contactos a autorizar</string>
