--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_app_launch">Spustiť</string>
     <string name="menu_app_settings">Nastavenia</string>
     <string name="menu_app_store">Obchod Play</string>
+    <string name="menu_app_kill">Kill</string>
     <string name="menu_accounts">Povolené účty</string>
     <string name="menu_applications">Povolené aplikácie</string>
     <string name="menu_contacts">Povolené kontakty</string>
