--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -90,6 +90,16 @@
     <string name="title_fuser">Filtra per aplicacions d\'usuari</string>
     <string name="title_fsystem">Filtra per aplicacions de sistema</string>
     <string name="title_fnot">Negate</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">Número de sèrie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
