--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -92,6 +92,16 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="title_fuser">Filtrar aplicaciones de usuario</string>
     <string name="title_fsystem">Filtrar aplicaciones de sistema</string>
     <string name="title_fnot">Negar</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial"># de serie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
