--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -91,6 +91,16 @@
     <string name="title_fuser">Suodata käyttäjän applikaatioihin</string>
     <string name="title_fsystem">Suodata järjestelmän applikaatioihin</string>
     <string name="title_fnot">invertoi</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">sarjanumero#</string>
     <string name="settings_lat">Latituudi</string>
     <string name="settings_lon">Longituudi</string>
