--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -92,6 +92,16 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_fuser">Filtrer les applis utilisateur</string>
     <string name="title_fsystem">Filtrer les applis système</string>
     <string name="title_fnot">Inverser</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
