--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -92,6 +92,16 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="title_fuser">Filtra per app utente</string>
     <string name="title_fsystem">Filtra per app di sistema</string>
     <string name="title_fnot">Nega</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">Numero di serie#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
