--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -92,6 +92,16 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_fuser">Filter op gebruikersapplicaties</string>
     <string name="title_fsystem">Filter op systeemapplicaties</string>
     <string name="title_fnot">Negatief</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
