--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -93,6 +93,16 @@
     <string name="title_fuser">пользовательские приложения</string>
     <string name="title_fsystem">системные приложения</string>
     <string name="title_fnot">Переключить</string>
+    <string name="title_sort_by">Sort by</string>
+
+    <string-array name="title_smodes">
+        <item >name</item>
+        <item >uid</item>
+        <item >date installed</item>
+        <item >date updated</item>
+    </string-array>
+
+    <string name="title_sattention">Apps requiring attention first</string>
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
