--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -100,9 +100,10 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
