--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -99,9 +99,10 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Seeria#</string>
     <string name="settings_lat">Laiuskraad</string>
     <string name="settings_lon">Pikkuskraad</string>
