--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -99,9 +99,10 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial"># de serie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
