--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -99,9 +99,10 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
