--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -99,9 +99,10 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Numero di serie#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
