--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -99,9 +99,10 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
