--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -99,9 +99,10 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
