--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -99,9 +99,10 @@ however it is impossible to guarantee it will work flawless on each and every de
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Ширина</string>
     <string name="settings_lon">Дужина</string>
