--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -99,9 +99,10 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
         <item >uid</item>
         <item >date installed</item>
         <item >date updated</item>
+        <item >date modified</item>
     </string-array>
 
-    <string name="title_sattention">Apps requiring attention first</string>
+    <string name="title_sinvert">Invert sort order</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
