--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -30,7 +30,7 @@
     <string name="menu_app_launch">Uitvoeren</string>
     <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">Geforceerd stoppen</string>
     <string name="menu_accounts">Sta accounts toe</string>
     <string name="menu_applications">Sta applicaties toe</string>
     <string name="menu_contacts">Sta contacten toe</string>
@@ -113,7 +113,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_expert">Expertmodus</string>
     <string name="settings_dangerous">Beperk gevaarlijke functies</string>
     <string name="settings_confidence">Maximum betrouwbaarheidsinterval voor ophalen</string>
-    <string name="settings_experimental">Experimentele functies</string>
+    <string name="settings_experimental">Experimentele functies (herstart vereist)</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
